--- a/style.css
+++ b/style.css
@@ -27,20 +27,18 @@ ul{list-style: none;padding: 0;margin: 0;}
 .storeinf_box .tip textarea{padding-right: 18px;}
 .storeinf_box .form_action{padding-top:10px;}
 
-.selectType{position: absolute;bottom: 0;left:0;width: 100%;background-color: #fff;display: none;}
+.interaction{position: absolute;bottom: 0;left:0;width: 100%;background-color: #fff;display: none;}
 .wrapper{width: 50%;float: left;overflow: hidden;height: 120px; position: relative;z-index: 2;color: #333;font-size: 14px;}
-.wrapper li{height: 40px;line-height: 40px;color: #666;}
+.wrapper li{height: 40px;line-height: 40px;color: #666;text-align: center;}
 .selected{position: absolute;top: 80px;height: 40px;width: 100%;}
 .mask{position: fixed;top: 0;left: 0;right: 0;bottom: 0;background-color: rgba(0,0,0,.2);
   display: none;}
 .header{height: 40px;text-align: right;color: #ff6600;font-size: 16px;position: relative;
   background-color: #f8f8f8;z-index: 2;line-height: 40px;padding-right: 10px;}
 .header #confirm{display: block;float: right;height: 40px;line-height: 40px;padding: 0 10px;}
-#wraPar li{text-align: right;padding-right: 20px;}
-#wraSub li{text-align: left;padding-left: 20px;}
 .scroller{ -webkit-transition: all .5s;-o-transition: all .5s;transition: all .5s;}
 .scroller .active{font-size:16px;color: #333;}
-.stshow .selectType{display: block;}
+.stshow .interaction{display: block;}
 .stshow .mask{display: block;}
 
 
